--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
+title: EuroPOND Software Toolbox
+description: Tools for data-driven neurological disease progression modelling
 theme: jekyll-theme-cayman
